upload progress bar fix layout issues on loign

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -65,6 +65,10 @@ footer .footer-left p {
     background-color: rgba(0, 0, 0, .08);
 }
 
+.card-body {
+    min-height: 90px;
+}
+
 .parent {
     display: flex;
     flex-wrap: wrap;
